# template-magic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  static-int-sort.cpp  static-list.hpp  static-sort.cpp  static-topological-sort.cpp
